Fix Home/child alignments issues

--- a/src/app/pages/templete10/chart/chart.component.css
+++ b/src/app/pages/templete10/chart/chart.component.css
@@ -1,7 +1,3 @@
-.user-button .row{
-    height: 110px;
-    width: 100%;
-}
 
 .img-responsive div{
         top: 25% !important;
