--- a/src/css/Custome_style.css
+++ b/src/css/Custome_style.css
@@ -258,7 +258,9 @@ form.m-t {
 	font-size: 17px;
 	margin-bottom: 2px;
 	margin-top: 15px !important;
-	color: #333333;
+    color: #333333;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .sub_login-title-style_card {
@@ -417,7 +419,7 @@ color: #fff;
 .childbox p{
     height: 3em;
     line-height: 25px;
-    overflow-y:  scroll;
+    overflow-y:  auto;
     min-height:  90px;
     overflow-x:   hidden;
 
